k8s/media-services/polaris/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: polaris
  namespace: media-services
  labels:
    app: polaris
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: polaris
